<resources>
    <string name="app_name" translatable="false">Notes App</string>
    <string name="add_note_title">Add Note</string>
    <string name="modify_delete_note_title">Modify/Delete Note</string>
    <string name="modify_delete_note_bt_modify">Modify</string>
    <string name="modify_delete_note_bt_delete">Delete</string>
    <string name="add_note_bt_accept">Add</string>
    <string name="add_note_bt_exit">Back</string>
    <string name="add_note_hint">Write content of the note</string>
    <string name="empty_list_notes">You don\'t have a note.\n\nCreate one from the plus button on the bar.</string>
    <string name="share_note_title">Read this note!</string>
</resources>
