<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:padding="5dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/add_note_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etAddNote"
        android:layout_margin="5dp"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btAdd"
            android:layout_weight="1"
            android:text="@string/add_note_bt_accept"
            android:background="@color/colorSuccess"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btCancel"
            android:layout_weight="1"
            android:text="@string/add_note_bt_exit"
            android:background="@color/colorError"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>